Bug 16247 - drm/i915 BUG with 2.6.35-rc
Summary: drm/i915 BUG with 2.6.35-rc
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks: 16055
  Show dependency tree
 
Reported: 2010-06-18 19:05 UTC by Maciej Rutecki
Modified: 2010-07-08 23:17 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.35-rc2
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
lock struct_mutex in i915_dma_cleanup() (649 bytes, patch)
2010-06-19 02:41 UTC, Dan Carpenter
Details | Diff

Description Maciej Rutecki 2010-06-18 19:05:16 UTC
Subject    : drm/i915 BUG with 2.6.35-rc
Submitter  : Benny Halevy <bhalevy@panasas.com>
Date       : 2010-06-14 22:38
Message-ID : 4C16AF56.1040002@panasas.com
References : http://marc.info/?l=linux-kernel&m=127655510531367&w=2

This entry is being used for tracking a regression from 2.6.34.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Dan Carpenter 2010-06-19 02:41:58 UTC
Created attachment 26858 [details]
lock struct_mutex in i915_dma_cleanup()

Hi Benny,

Can you give the attached patch a go?

drm_irq_uninstall() has to be called with struct_mutex not held and intel_cleanup_ring_buffer() has to be called with struct_mutex held.  That bit is straight forward.

I don't know about i915_free_hws() but I think we don't needed to hold struct_mutex for that.

I don't have the actual hardware myself, so I haven't tested this.
Comment 2 Benny Halevy 2010-06-22 04:18:11 UTC
That did the trick.
Booted with this patch and I have not seen the crash.

Thanks!
Comment 3 Rafael J. Wysocki 2010-07-08 23:13:46 UTC
Fixed by commit ee0c6bfbd602cdad2ab1780061b3b1a9108cbd6c .

Note You need to log in before you can comment on or make changes to this bug.